some minor changes to routes and documentation.
